# Breakout

./: .gitignore  Breakout.kdev4  CMakeLists.txt  README.md  background.cpp  ball.cpp  ball.hpp  breakout  brick.cpp  brick.hpp  bricks_reset.cpp  constants.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  game.cpp  game.hpp  game_state.hpp  handle_collision.cpp  interactions.cpp  interactions.hpp  main.cpp  paddle.cpp  paddle.hpp  paddle_moves.cpp  reset.cpp  run.cpp  set_text.cpp  textbox.cpp  textbox.hpp  variables.hpp
.kdev4/: Breakout.kdev4  sfml_testing.kdev4
Breakout/: Breakout.desktop  sfml_testing.desktop
include/: background.hpp  brick.hpp  entity.hpp  entity_manager.hpp  game.hpp  game_state.hpp  moving_entity.hpp  textbox.hpp
junk_Images/: brick_blue.xcf  power.xcf  power2.xcf  text_background.xcf
junk_images/: brick_red.xcf
src/: background.cpp  ball.cpp  brick.cpp  bricks_reset.cpp  entity.cpp  entity_manager.cpp  game.cpp  handle_collision.cpp  interactions.cpp  main.cpp  paddle.cpp  paddle_moves.cpp  reset.cpp  run.cpp  textbox.cpp
